# media-search-monitor

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  pyproject.toml
config/: app.yaml  date_rules.yaml  keywords.csv  site_overrides.yaml  sites.yaml
docs/: README.md  google_cse_strategy.md  parser_strategy.md  playwright_reduction_audit.md  setup_and_operation.md  site_date_availability_matrix.md  site_date_availability_review.html  site_date_availability_review.md  site_date_location_audit.md  site_date_rules.md  site_legal_review.md  site_operation_review.md  title_trailing_date_audit.md
docs/archive/: assumptions.md
docs/site_notes/: initial_media_targets.md
local-viewer/: Cargo.toml
local-viewer/src/: main.rs
scripts/: audit_date_locations.py  audit_search_article_dates.py  audit_title_trailing_dates.py  render_markdown_html.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  viewer_core.rs
src/news_monitor/: __init__.py  cli.py  config.py  crawler.py  database.py  date_utils.py  errors.py  fetcher.py  models.py  parser.py  reporter.py  url_utils.py
tests/: conftest.py  test_config.py  test_crawler.py  test_database.py  test_date_utils.py  test_google_cse_fetcher.py  test_parser.py  test_reporter.py  test_site_date_rules.py  test_url_utils.py
tests/fixtures/: chunichi_search_result.html  denki_shimbun_article.html  denki_shimbun_google_cse_result.html  denshi_device_search_result.html  diamond_search_result.html  impress_watch_google_cse_result.html  jiji_google_cse_result.html  kentsu_search_result.html  tokyo_np_article.html  (+10 more)
ui/: api.js  app.js  index.html  styles.css
