[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "news-monitor"
version = "0.1.0"
description = "Collect media site search result URLs into SQLite and produce HTML reports."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.28",
  "PyYAML>=6.0",
  "truststore>=0.10",
]

[project.optional-dependencies]
test = ["pytest>=8"]
playwright = ["playwright>=1.45"]

[project.scripts]
news-monitor = "news_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
