[package]
name = "news-monitor-local-viewer"
version = "0.1.0"
description = "Localhost browser viewer for news monitor SQLite data"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5"] }
